--- a/EFD-Admin/HomeViewController.xib
+++ b/EFD-Admin/HomeViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="ipad11_0rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,14 +15,68 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+            <rect key="frame" x="0.0" y="0.0" width="834" height="1210"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="delivery_background" translatesAutoresizingMaskIntoConstraints="NO" id="utf-FC-DWK">
+                    <rect key="frame" x="0.0" y="0.0" width="834" height="1234"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Connexion ADMIN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1Z-Lk-6Ok">
+                    <rect key="frame" x="0.0" y="260" width="834" height="49"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="44"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctO-t9-h9B">
+                    <rect key="frame" x="0.0" y="707" width="834" height="41"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="34"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZO9-Bf-ykT">
+                    <rect key="frame" x="369" y="789" width="96" height="34"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4V-d5-nAO">
+                    <rect key="frame" x="4.5" y="869" width="825" height="41"/>
+                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="34"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="102" y="20"/>
+            <constraints>
+                <constraint firstItem="B4V-d5-nAO" firstAttribute="width" secondItem="ZO9-Bf-ykT" secondAttribute="width" multiplier="8.59794" id="3VL-tU-0z8"/>
+                <constraint firstItem="ZO9-Bf-ykT" firstAttribute="centerX" secondItem="B4V-d5-nAO" secondAttribute="centerX" id="7ap-OW-jUc"/>
+                <constraint firstItem="F1Z-Lk-6Ok" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="9Qk-RV-qek"/>
+                <constraint firstAttribute="bottom" secondItem="utf-FC-DWK" secondAttribute="bottom" constant="-24" id="9rG-na-E19"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ZO9-Bf-ykT" secondAttribute="trailing" constant="20" id="Cz7-ck-z6e"/>
+                <constraint firstAttribute="trailing" secondItem="utf-FC-DWK" secondAttribute="trailing" id="EIg-r7-0Rf"/>
+                <constraint firstItem="B4V-d5-nAO" firstAttribute="top" secondItem="ZO9-Bf-ykT" secondAttribute="bottom" constant="46" id="HT0-Sl-V2A"/>
+                <constraint firstItem="ZO9-Bf-ykT" firstAttribute="centerX" secondItem="ctO-t9-h9B" secondAttribute="centerX" id="I1N-Ex-bvc"/>
+                <constraint firstItem="ZO9-Bf-ykT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="O0b-pm-hgK"/>
+                <constraint firstItem="F1Z-Lk-6Ok" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="236" id="Ur3-hM-136"/>
+                <constraint firstItem="utf-FC-DWK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="VFa-zj-qHh"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="F1Z-Lk-6Ok" secondAttribute="trailing" id="VGM-zj-IV7"/>
+                <constraint firstItem="utf-FC-DWK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Wi6-Gf-KQ7"/>
+                <constraint firstItem="ctO-t9-h9B" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cIE-Zb-w4F"/>
+                <constraint firstItem="ZO9-Bf-ykT" firstAttribute="top" secondItem="ctO-t9-h9B" secondAttribute="bottom" constant="41" id="eDL-Yq-MAc"/>
+                <constraint firstItem="B4V-d5-nAO" firstAttribute="top" secondItem="ZO9-Bf-ykT" secondAttribute="bottom" constant="46" id="gz9-IR-bkT"/>
+                <constraint firstItem="F1Z-Lk-6Ok" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="kPh-kO-got"/>
+                <constraint firstItem="ZO9-Bf-ykT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="369" id="pxq-A7-pXc"/>
+                <constraint firstItem="ctO-t9-h9B" firstAttribute="top" secondItem="F1Z-Lk-6Ok" secondAttribute="bottom" constant="398" id="qKW-5B-krw"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="F1Z-Lk-6Ok" secondAttribute="bottom" constant="881" id="sBm-O0-AYG"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ctO-t9-h9B" secondAttribute="trailing" id="xlQ-Gd-46z"/>
+                <constraint firstItem="ZO9-Bf-ykT" firstAttribute="top" secondItem="ctO-t9-h9B" secondAttribute="bottom" constant="41" id="zNH-d1-zlO"/>
+                <constraint firstItem="F1Z-Lk-6Ok" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="zVm-wt-Ekt"/>
+            </constraints>
+            <point key="canvasLocation" x="101.43884892086332" y="19.834710743801654"/>
         </view>
     </objects>
     <resources>
+        <image name="delivery_background" width="1024" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
