--- a/EFD-Admin/AccueilViewController.xib
+++ b/EFD-Admin/AccueilViewController.xib
@@ -1,22 +1,159 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="ipad11_0rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AccueilViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AccueilViewController" customModule="EFD_Admin" customModuleProvider="target">
             <connections>
+                <outlet property="disconnectButton" destination="eIG-9B-Uvm" id="yzd-y6-ORj"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="834" height="1210"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="delivery_home" translatesAutoresizingMaskIntoConstraints="NO" id="Ezm-ed-PKm">
+                    <rect key="frame" x="0.0" y="0.0" width="834" height="1210"/>
+                </imageView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="75" translatesAutoresizingMaskIntoConstraints="NO" id="E7v-z3-fMk">
+                    <rect key="frame" x="0.0" y="24" width="834" height="1166"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rc9-bK-Plz">
+                            <rect key="frame" x="0.0" y="0.0" width="834" height="338.5"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tt7-zv-CbQ">
+                                    <rect key="frame" x="329.5" y="30" width="189.5" height="53"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="44"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eIG-9B-Uvm">
+                                    <rect key="frame" x="644" y="36" width="160" height="41.5"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="160" id="6De-tg-KUN"/>
+                                    </constraints>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="Disconnect" cornerStyle="capsule">
+                                        <fontDescription key="titleFontDescription" type="boldSystem" pointSize="23"/>
+                                        <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="baseBackgroundColor" red="0.96611279250000004" green="0.082573516129999996" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </buttonConfiguration>
+                                    <connections>
+                                        <action selector="handleDisconnect:" destination="-1" eventType="touchUpInside" id="Lti-W6-TfY"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="tt7-zv-CbQ" firstAttribute="top" secondItem="Rc9-bK-Plz" secondAttribute="top" constant="30" id="Aug-4b-5nf"/>
+                                <constraint firstItem="tt7-zv-CbQ" firstAttribute="centerY" secondItem="eIG-9B-Uvm" secondAttribute="centerY" id="MDZ-OJ-AtY"/>
+                                <constraint firstItem="tt7-zv-CbQ" firstAttribute="centerX" secondItem="Rc9-bK-Plz" secondAttribute="centerX" constant="7" id="njl-as-mWy"/>
+                                <constraint firstAttribute="trailing" secondItem="eIG-9B-Uvm" secondAttribute="trailing" constant="30" id="zoi-Hp-UAD"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xuy-zE-MH5">
+                            <rect key="frame" x="0.0" y="413.5" width="834" height="339"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbN-Lg-Cqf">
+                                    <rect key="frame" x="27" y="70" width="181" height="159"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="Parcel">
+                                        <fontDescription key="titleFontDescription" type="system" pointSize="36"/>
+                                    </buttonConfiguration>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="unC-cH-MQn">
+                                    <rect key="frame" x="642" y="94" width="162" height="38"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="162" id="2rB-n5-m7g"/>
+                                    </constraints>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="deliveryman">
+                                        <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
+                                    </buttonConfiguration>
+                                </button>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="vbN-Lg-Cqf" firstAttribute="top" secondItem="Xuy-zE-MH5" secondAttribute="top" constant="70" id="3Ku-4Y-Svd"/>
+                                <constraint firstItem="unC-cH-MQn" firstAttribute="height" secondItem="vbN-Lg-Cqf" secondAttribute="height" multiplier="0.239264" id="3pe-ok-U9Y"/>
+                                <constraint firstItem="vbN-Lg-Cqf" firstAttribute="width" secondItem="Xuy-zE-MH5" secondAttribute="width" multiplier="0.217026" id="DDe-hv-zLu"/>
+                                <constraint firstItem="unC-cH-MQn" firstAttribute="top" secondItem="Xuy-zE-MH5" secondAttribute="top" constant="94" id="UCY-aC-oa8"/>
+                                <constraint firstAttribute="trailing" secondItem="unC-cH-MQn" secondAttribute="trailing" constant="30" id="kgl-Rf-dtr"/>
+                                <constraint firstItem="vbN-Lg-Cqf" firstAttribute="leading" secondItem="Xuy-zE-MH5" secondAttribute="leading" constant="27" id="sFA-nJ-uX4"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p0X-j3-Eg5">
+                            <rect key="frame" x="0.0" y="827.5" width="834" height="338.5"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vVm-tf-2cw">
+                                    <rect key="frame" x="63" y="117" width="309" height="213"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="309" id="y7N-h9-JBY"/>
+                                    </constraints>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="Map">
+                                        <fontDescription key="titleFontDescription" type="system" pointSize="36"/>
+                                    </buttonConfiguration>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8t-qV-6vA">
+                                    <rect key="frame" x="603" y="22" width="173" height="109"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="109" id="GY0-q6-2KS"/>
+                                    </constraints>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="filled" title="Delivery tour">
+                                        <fontDescription key="titleFontDescription" type="system" pointSize="24"/>
+                                    </buttonConfiguration>
+                                </button>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="vVm-tf-2cw" secondAttribute="bottom" constant="8.5" id="0xW-tn-xSG"/>
+                                <constraint firstAttribute="trailing" secondItem="d8t-qV-6vA" secondAttribute="trailing" constant="58" id="NqW-0q-Eba"/>
+                                <constraint firstItem="d8t-qV-6vA" firstAttribute="width" secondItem="p0X-j3-Eg5" secondAttribute="width" multiplier="0.207434" id="UQe-Vc-FRK"/>
+                                <constraint firstItem="vVm-tf-2cw" firstAttribute="leading" secondItem="p0X-j3-Eg5" secondAttribute="leading" constant="63" id="egg-Rc-CJj"/>
+                                <constraint firstItem="vVm-tf-2cw" firstAttribute="height" secondItem="d8t-qV-6vA" secondAttribute="height" multiplier="1.95413" id="gVS-yJ-6HC"/>
+                                <constraint firstItem="d8t-qV-6vA" firstAttribute="top" secondItem="p0X-j3-Eg5" secondAttribute="top" constant="22" id="jhE-kY-Juj"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="p0X-j3-Eg5" secondAttribute="trailing" id="1hr-Sx-D8y"/>
+                        <constraint firstAttribute="trailing" secondItem="Xuy-zE-MH5" secondAttribute="trailing" id="9Tu-wn-EvT"/>
+                        <constraint firstItem="p0X-j3-Eg5" firstAttribute="leading" secondItem="E7v-z3-fMk" secondAttribute="leading" id="FIN-5b-BLG"/>
+                        <constraint firstItem="Xuy-zE-MH5" firstAttribute="height" secondItem="Rc9-bK-Plz" secondAttribute="height" id="RPe-ig-4jT"/>
+                        <constraint firstItem="p0X-j3-Eg5" firstAttribute="height" secondItem="Rc9-bK-Plz" secondAttribute="height" id="RXW-2E-Sj0"/>
+                        <constraint firstItem="Xuy-zE-MH5" firstAttribute="leading" secondItem="E7v-z3-fMk" secondAttribute="leading" id="UUj-pG-gaz"/>
+                        <constraint firstItem="Rc9-bK-Plz" firstAttribute="leading" secondItem="E7v-z3-fMk" secondAttribute="leading" id="cr7-f9-2h7"/>
+                        <constraint firstAttribute="trailing" secondItem="Rc9-bK-Plz" secondAttribute="trailing" id="h0j-J1-dMs"/>
+                    </constraints>
+                </stackView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="E7v-z3-fMk" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="24" id="FQ9-IB-tfw"/>
+                <constraint firstItem="Ezm-ed-PKm" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="GvU-yT-Mqs"/>
+                <constraint firstItem="Ezm-ed-PKm" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="JbD-dT-o9G"/>
+                <constraint firstItem="E7v-z3-fMk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="MAj-2j-kGz"/>
+                <constraint firstAttribute="bottom" secondItem="E7v-z3-fMk" secondAttribute="bottom" constant="20" id="Yba-cr-NY4"/>
+                <constraint firstItem="E7v-z3-fMk" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="dzC-h2-O8B"/>
+                <constraint firstItem="Ezm-ed-PKm" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="rEr-Oa-M8D"/>
+                <constraint firstItem="Ezm-ed-PKm" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="sJv-AK-GwP"/>
+                <constraint firstAttribute="trailing" secondItem="E7v-z3-fMk" secondAttribute="trailing" id="vkd-1K-gYr"/>
+            </constraints>
+            <point key="canvasLocation" x="83.453237410071949" y="20.826446280991735"/>
         </view>
     </objects>
+    <resources>
+        <image name="delivery_home" width="1024" height="1024"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
